[tool.poetry]
name = "jinja101"
version = "0.2.0"
description = "Playground for jinja2 templates"
authors = ["ubaumann <github@m.ubaumann.ch>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
pyaml = "*"
gunicorn = "*"
ansible = "*"
ansible-core = "^2.17"
salt = "*"
netaddr = "*"
timelib = "*"
jmespath = "*"
passlib = "*"

[tool.poetry.dev-dependencies]
black = "^23"
pylama = "^8"
rich = "^13"
pytest = "^7.4.4"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
