[project]
name = "jinja101"
version = "0.2.0"
description = "Playground for jinja2 templates"
authors = [
    {name = "ubaumann", email = "github@m.ubaumann.ch"},
]
requires-python = ">=3.8"
dependencies = [
    "flask",
    "pyaml",
    "gunicorn",
    "ansible",
    "salt",
    "netaddr",
    "timelib",
    "jmespath",
]

[dependency-groups]
dev = [
    "black>=23.12.1",
    "pylama>=8",
    "rich>=13",
    "pytest>=7.4.4",
]
